# townspark_backend_new

./: .gitignore  conftest.py  db.sqlite3  main.py  pyproject.toml
accounts/: admin.py  auth.py  backends.py  managers.py  models.py  profile_urls.py  serializers.py  urls.py  views.py
accounts/helpers/: update_profile_pic.py
accounts/migrations/: 0001_initial.py  0002_alter_user_managers_and_more.py  0003_alter_user_managers_alter_user_email.py
accounts/update/: serializers.py  views.py
core/: exceptions.py  renderers.py
core/middleware/: SRE.py
issues/: admin.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
issues/migrations/: 0001_initial.py  0002_issue_address_alter_issue_category_and_more.py
main_app/: asgi.py  settings.py  urls.py  wsgi.py
